fix homepage sticky footer layout issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,12 +21,12 @@ h6 {
 /* sticky footer */
 html,
 body {
-    height: 100%;
+    height: 110%;
     margin: 0;
 }
 
 .content {
-    height: 95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
